# rtof-data-model-tools

./: .gitignore  README.md  convert.py  main.py  migrate.py  pyproject.toml
.github/workflow/: test.yml
.github/workflows/: publish.yml  test.yml
rtofdata/: __init__.py  config.py  erd.py  excel.py  fake.py  fake_generator.py  jekyll.py  parser.py  spec_parser.py  word.py
rtofdata/datasource/: __init__.py  in_memory.py
rtofdata/eventstream/: __init__.py
rtofdata/fake/: __main__.py  faker.py  generators.py  output.py  serialization.py  sql.py
rtofdata/parser/: __init__.py  __main__.py  parser.py
rtofdata/specification/: data.py  download.py  parser.py
rtofdata/util/: config.py  error_handler.py
rtofdata/validation/: __init__.py
rtofdata/validation/validators/: __init__.py
templates/samples/: small.yml
test/: test_csv_parser.py  test_stream_insert.py
tests/: conftest.py  test_datasource_memory.py  test_parser.py  test_parser_stream.py  test_parser_util.py  test_validators.py
tests/files/: parser_sample_1.csv  parser_sample_1.xls  parser_sample_1.xlsx
website/: Gemfile  _config.yml  all_fields.md  changelog.md  datasamples.md  datatypes.md  dimensions.html  dimensions.md  fields.html  index.markdown  index.md  records.md  uploadinfo.md
website/_includes/: top-nav.html
website/_layouts/: default.html  dimension.html  record.html
website/assets/css/: site.css
